[gd_scene load_steps=5 format=3 uid="uid://de4m8j76trv53"]

[ext_resource type="Script" uid="uid://3kyshr62w755" path="res://事件间隔/character_body_2d.gd" id="1_r0suu"]
[ext_resource type="Texture2D" uid="uid://csttsj4lm4vm8" path="res://icon.svg" id="1_xck0j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xck0j"]
size = Vector2(116, 114)

[sub_resource type="LabelSettings" id="LabelSettings_r0suu"]
font_size = 33

[node name="EventInterval" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_r0suu")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("1_xck0j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_xck0j")

[node name="PrimaryTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="SecondTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 51.0
offset_top = 71.0
offset_right = 1195.0
offset_bottom = 321.0
text = "主要思路: 使用变量控制是否可以触发事件 , 
在触发事件之后将变量 false 并且 打开计时器
计时器超时时将变量 true

计时器节点设置时长以及 one short , 使计时器只触发一次"
label_settings = SubResource("LabelSettings_r0suu")

[connection signal="timeout" from="CharacterBody2D/PrimaryTimer" to="CharacterBody2D" method="_on_primary_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/SecondTimer" to="CharacterBody2D" method="_on_second_timer_timeout"]
